Create unit tests for FileUtil