@@ -3,12 +3,12 @@ package com.github.marceloleite2604.util.file;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
-import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -25,13 +25,18 @@ public class FileUtil {
 
 	private static final int BYTE_BLOCK_SIZE = 1024;
 
-	public String retrieveContentFromFile(String filePath) {
-		return retrieveContentFromFile(Paths.get(filePath));
+	public String retrieveTextContentFromFile(String filePath) {
+		return retrieveTextContentFromFile(Paths.get(filePath));
 	}
 
-	public String retrieveContentFromFile(Path path) {
+	public String retrieveTextContentFromFile(Path path) {
+		throwExceptionIfFileDoesNotExist(path);
+		throwExceptionIfFileIsDirectory(path);
+		return readTextContentFromFile(path);
+	}
 
-		try (BufferedReader bufferedReader = createBufferedReader(path, StandardCharsets.UTF_8)) {
+	private String readTextContentFromFile(Path path) {
+		try (BufferedReader bufferedReader = createBufferedReader(path)) {
 			return bufferedReader.lines()
 					.collect(Collectors.joining(System.lineSeparator()));
 		} catch (IOException exception) {
@@ -41,30 +46,59 @@ public class FileUtil {
 		}
 	}
 
-	private BufferedReader createBufferedReader(Path path, Charset charset) throws IOException {
+	public byte[] retrieveBinaryContentFromFile(String filePath) {
+		return retrieveBinaryContentFromFile(Paths.get(filePath));
+	}
+
+	public byte[] retrieveBinaryContentFromFile(Path path) {
+		throwExceptionIfFileDoesNotExist(path);
+		throwExceptionIfFileIsDirectory(path);
+		return readBinaryContentFromFile(path);
+	}
+
+	private byte[] readBinaryContentFromFile(Path path) {
+		try (FileInputStream fileInputStream = new FileInputStream(path.toFile())) {
+			return fileInputStream.readAllBytes();
+		} catch (IOException exception) {
+			String message = String.format(FileUtilMessageTemplates.ERROR_READING_FILE_CONTENT,
+					path);
+			throw new FileUtilException(exception, message);
+		}
+	}
+
+	private BufferedReader createBufferedReader(Path path) throws IOException {
 		if (path.toFile()
 				.exists()) {
-			return Files.newBufferedReader(path, charset);
+			return Files.newBufferedReader(path, StandardCharsets.UTF_8);
 		} else {
-			InputStream inputStream = createInputStreamFromClasspath(path.toString());
-			if (inputStream == null) {
-				String message = String.format(FileUtilMessageTemplates.FILE_DOES_NOT_EXIST, path);
-				throw new FileUtilException(message);
-			}
+			InputStream inputStream = retrieveMandatoryInputStreamFromClasspath(path);
 			InputStreamReader inputStreamReader = new InputStreamReader(inputStream);
 			return new BufferedReader(inputStreamReader);
 		}
 
 	}
 
-	private InputStream createInputStreamFromClasspath(String caminhoArquivo) {
+	private InputStream retrieveMandatoryInputStreamFromClasspath(Path path) {
+		InputStream inputStream = retrieveInputStreamFromClasspath(path.toString());
+		if (inputStream == null) {
+			String message = String.format(FileUtilMessageTemplates.FILE_DOES_NOT_EXIST, path);
+			throw new FileUtilException(message);
+		}
+		return inputStream;
+	}
+
+	private InputStream retrieveInputStreamFromClasspath(String path) {
 		return Thread.currentThread()
 				.getContextClassLoader()
-				.getResourceAsStream(caminhoArquivo);
+				.getResourceAsStream(path);
 	}
 
 	public void writeContentOnFile(String path, String content) {
-		try (FileOutputStream fileOutputStream = new FileOutputStream(path);
+		writeContentOnFile(Path.of(path), content);
+	}
+
+	public void writeContentOnFile(Path path, String content) {
+		try (FileOutputStream fileOutputStream = new FileOutputStream(path.toFile());
 				OutputStreamWriter outputStreamWriter = new OutputStreamWriter(fileOutputStream,
 						StandardCharsets.UTF_8);
 				BufferedWriter bufferedWriter = new BufferedWriter(outputStreamWriter)) {
@@ -77,7 +111,11 @@ public class FileUtil {
 	}
 
 	public void writeContentOnFile(String path, byte[] bytes) {
-		try (FileOutputStream fileOutputStream = new FileOutputStream(path)) {
+		writeContentOnFile(Path.of(path), bytes);
+	}
+
+	public void writeContentOnFile(Path path, byte[] bytes) {
+		try (FileOutputStream fileOutputStream = new FileOutputStream(path.toFile())) {
 			fileOutputStream.write(bytes);
 		} catch (IOException exception) {
 			String message = String.format(FileUtilMessageTemplates.ERROR_WRITING_CONTENT_ON_FILE,
@@ -86,7 +124,18 @@ public class FileUtil {
 		}
 	}
 
-	public String formatAsHumanReadableSize(int size) {
+	public String retrieveFileSize(Path path) {
+		long fileSizeBytes = path.toFile()
+				.length();
+
+		return formatAsHumanReadableSize(fileSizeBytes);
+	}
+
+	public String retrieveFileSize(String path) {
+		return retrieveFileSize(Path.of(path));
+	}
+
+	public String formatAsHumanReadableSize(long size) {
 		int logSizeBaseBlock = (int) log(size, BYTE_BLOCK_SIZE);
 
 		return String.format("%.1f %s", size / Math.pow(BYTE_BLOCK_SIZE, logSizeBaseBlock),
@@ -112,32 +161,52 @@ public class FileUtil {
 		}
 	}
 
-	public boolean fileExists(String filePath) {
-		return Paths.get(filePath)
-				.toFile()
+	public boolean fileExists(Path path) {
+		return path.toFile()
 				.exists();
 	}
 
-	public void throwErrorIfDirectoryDoesNotExist(String directoryPath) {
-		throwErrorIfFileIsNotDirectory(directoryPath);
+	public boolean fileExists(String filePath) {
+		return fileExists(Path.of(filePath));
+	}
 
-		File directory = Paths.get(directoryPath)
-				.toFile();
+	public void throwExceptionIfDirectoryDoesNotExist(String path) {
+		throwExceptionIfDirectoryDoesNotExist(Path.of(path));
+	}
+
+	public void throwExceptionIfDirectoryDoesNotExist(Path path) {
+		throwExceptionIfFileIsNotDirectory(path);
+
+		File directory = path.toFile();
 
 		if (!directory.exists()) {
-			String message = String.format(FileUtilMessageTemplates.DIRECTORY_DOES_NOT_EXIST,
-					directoryPath);
+			String message = String.format(FileUtilMessageTemplates.DIRECTORY_DOES_NOT_EXIST, path);
 			throw new FileUtilException(message);
 		}
 	}
 
-	public void throwErrorIfFileIsNotDirectory(String directoryPath) {
-		File directory = Paths.get(directoryPath)
-				.toFile();
+	public void throwExceptionIfFileIsNotDirectory(String path) {
+		throwExceptionIfFileIsNotDirectory(Path.of(path));
+	}
+
+	public void throwExceptionIfFileIsNotDirectory(Path path) {
+		File directory = path.toFile();
 
 		if (directory.isFile()) {
-			String message = String.format(FileUtilMessageTemplates.FILE_IS_NOT_DIRECTORY,
-					directoryPath);
+			String message = String.format(FileUtilMessageTemplates.FILE_IS_NOT_DIRECTORY, path);
+			throw new FileUtilException(message);
+		}
+	}
+
+	public void throwExceptionIfFileIsDirectory(String path) {
+		throwExceptionIfFileIsDirectory(Path.of(path));
+	}
+
+	public void throwExceptionIfFileIsDirectory(Path path) {
+		File directory = path.toFile();
+
+		if (!directory.isFile()) {
+			String message = String.format(FileUtilMessageTemplates.FILE_IS_A_DIRECTORY, path);
 			throw new FileUtilException(message);
 		}
 	}
@@ -148,5 +217,16 @@ public class FileUtil {
 		}
 
 		return text;
+	}
+
+	public void throwExceptionIfFileDoesNotExist(String path) {
+		throwExceptionIfFileDoesNotExist(Path.of(path));
+	}
+
+	public void throwExceptionIfFileDoesNotExist(Path path) {
+		if (!fileExists(path)) {
+			String message = String.format(FileUtilMessageTemplates.FILE_DOES_NOT_EXIST, path);
+			throw new FileUtilException(message);
+		}
 	}
 }
